@@ -10,6 +10,7 @@
   * JRuby 1.9 error, uncaught throw 'encoding_found', has been fixed. #673
   * Invalid encoding returned in JRuby with US-ASCII. #583
   * XmlSaxPushParser raises IndexOutOfBoundsException when over 512 characters are given. #567, #615
+  * When xpath evaluation returns empty NodeSet, decorating NodeSet's base document raises exception. #514
 
 
 == 1.5.4 / 2012-06-12
